# demo-nextauth

./: .gitignore  README.md  dev.be.Dockerfile  dev.fe.Dockerfile  docker-compose.yaml  pyproject.toml
flash/: Makefile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
flash/src/app/: globals.css  layout.tsx  page.tsx
flash/src/components/: footer.module.css  footer.tsx  header.module.css  header.tsx  profile-icon.tsx
flash/src/pages/api/auth/: [...nextauth].js
flash_server/: Makefile  manage.py
flash_server/accounts/: admin.py  models.py  urls.py
flash_server/accounts/migrations/: 0001_initial.py
flash_server/flash_server/: asgi.py  settings.py  urls.py  wsgi.py
